<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/toolbarH"
        layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarH"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNameH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewEmailH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_email_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewLatAndLongH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_lat_long_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonGetPhone1H"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_people_black"
                    android:text="@string/txt_get"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/textViewGet1H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_phone_test"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/firstLayout"
                android:layout_marginStart="@dimen/margin_left_second_layout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonGetPhone2H"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person_black"
                    android:text="@string/txt_get"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/textViewGet2H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_phone_test"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>




        </RelativeLayout>

        <Button
            android:id="@+id/buttonSaveH"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonSignOutH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/txt_btn_sign_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>